--- a/nomad/index.html
+++ b/nomad/index.html
@@ -66,7 +66,7 @@
     <div class="container">
         <header>
             <!-- Logo Placeholder -->
-            <img src="URL_TO_YOUR_LOGO_IMAGE" alt="Nomad Logo">
+            <img src="../assets/nomad/nomad-logo.png" alt="Nomad Logo">
 
             <h1>Welcome to Nomad</h1>
             <p>Tired of the endless hours planning trips? Dive into the world of Nomad, where your next adventure is a few taps away.</p>
