--- a/nomad/index.html
+++ b/nomad/index.html
@@ -76,14 +76,14 @@
         <div class="features-list">
             <!-- Feature 1 -->
             <div class="feature">
-                <img src="URL_TO_LANDSCAPE_IMAGE" alt="AI-Powered Itineraries Image (e.g., a digital globe or neural network visualization)">
+                <img src="../assets/nomad/techImage.png" alt="AI-Powered Itineraries Image (e.g., a digital globe or neural network visualization)">
                 <h2>AI-Powered Itineraries</h2>
                 <p>Input your desired destination and travel dates, and let our sophisticated AI craft a detailed itinerary tailored specifically for you.</p>
             </div>
             
             <!-- Feature 2 -->
             <div class="feature">
-                <img src="URL_TO_ORGANIZED_IMAGE" alt="Organized & Accessible Image (e.g., calendar or journal)">
+                <img src="https://images.unsplash.com/photo-1615826932727-ed9f182ac67e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2671&q=80" alt="Organized & Accessible Image (e.g., calendar or journal)">
                 <h2>Organized & Accessible</h2>
                 <p>All your trips, chronologically sorted! Return to the app at any time to review your previously crafted itineraries.</p>
             </div>
