Adding more information for pages

--- a/nomad/index.html
+++ b/nomad/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,7 +49,7 @@
             border: 1px solid #ddd;
             border-radius: 5px;
             background-color: #fff;
-            box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         .feature img {
@@ -62,6 +63,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -69,23 +71,28 @@
             <img src="../assets/nomad/nomad-logo.png" alt="Nomad Logo">
 
             <h1>Welcome to Nomad</h1>
-            <p>Tired of the endless hours planning trips? Dive into the world of Nomad, where your next adventure is a few taps away.</p>
+            <p>Tired of the endless hours planning trips? Dive into the world of Nomad, where your next adventure is a
+                few taps away.</p>
         </header>
 
         <!-- Features -->
         <div class="features-list">
             <!-- Feature 1 -->
             <div class="feature">
-                <img src="../assets/nomad/techImage.png" alt="AI-Powered Itineraries Image (e.g., a digital globe or neural network visualization)">
+                <img src="../assets/nomad/techImage.png"
+                    alt="AI-Powered Itineraries Image (e.g., a digital globe or neural network visualization)">
                 <h2>AI-Powered Itineraries</h2>
-                <p>Input your desired destination and travel dates, and let our sophisticated AI craft a detailed itinerary tailored specifically for you.</p>
+                <p>Input your desired destination and travel dates, and let our sophisticated AI craft a detailed
+                    itinerary tailored specifically for you.</p>
             </div>
-            
+
             <!-- Feature 2 -->
             <div class="feature">
-                <img src="https://images.unsplash.com/photo-1615826932727-ed9f182ac67e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2671&q=80" alt="Organized & Accessible Image (e.g., calendar or journal)">
+                <img src="https://images.unsplash.com/photo-1615826932727-ed9f182ac67e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2671&q=80"
+                    alt="Organized & Accessible Image (e.g., calendar or journal)">
                 <h2>Organized & Accessible</h2>
-                <p>All your trips, chronologically sorted! Return to the app at any time to review your previously crafted itineraries.</p>
+                <p>All your trips, chronologically sorted! Return to the app at any time to review your previously
+                    crafted itineraries.</p>
             </div>
 
             <!-- Additional features can be added similarly... -->
@@ -95,8 +102,32 @@
         <!-- Call To Action -->
         <div class="cta">
             <h2>Join the Nomad community today!</h2>
-            <p>Turn the tedious task of trip planning into a delightful experience. Travel the world with confidence, knowing Nomad has got your back.</p>
+            <p>Turn the tedious task of trip planning into a delightful experience. Travel the world with confidence,
+                knowing Nomad has got your back.</p>
+        </div>
+
+        <!-- About Us -->
+        <div class="about-us">
+            <h2>Meet the Team Behind Nomad</h2>
+            <p>At Nomad, we're more than just an app; we're a passionate group of individuals committed to reimagining
+                the way you travel. Founded by a small team of tech enthusiasts and avid travelers, we believe in the
+                transformative power of exploration. Our journey began with a simple idea: harness the best of
+                technology to connect people to the world around them.</p>
+
+            <p>Traveling should be an enriching experience, opening our eyes to new cultures, landscapes, and horizons.
+                Yet, with the ever-growing influx of information, planning a trip often becomes overwhelming. We wanted
+                to change that. With Nomad, we've harnessed the prowess of AI to simplify trip planning, ensuring each
+                journey you embark on is unique and tailored just for you.</p>
+
+            <p>But beyond the tech, your safety is our utmost priority. While we encourage every adventurer to explore
+                uncharted territories, we also emphasize the importance of traveling safely. In this digital age, we're
+                leveraging cutting-edge tools to ensure you're not only discovering new places but doing so with
+                confidence and security.</p>
+
+            <p>We're here for you, every step of the way. So pack your bags, and let's explore this beautiful world
+                together. With Nomad by your side, every journey promises to be an unforgettable adventure.</p>
         </div>
     </div>
 </body>
+
 </html>
