Adding more information for page

--- a/nomad/index.html
+++ b/nomad/index.html
@@ -206,6 +206,71 @@
         li {
             margin-bottom: 15px;
         }
+
+
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #302928;
+            color: #98A2B5;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #C8C6BE;
+            border-radius: 10px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        }
+
+        header {
+            text-align: center;
+            padding: 40px 0;
+            background-color: #726E75;
+            border-radius: 8px;
+            margin-bottom: 30px;
+        }
+
+        header h1 {
+            font-size: 2.5em;
+            color: #C4C7C6;
+        }
+
+        header p {
+            font-size: 1.2em;
+            margin-top: 20px;
+        }
+
+        .features-list,
+        .ai-discovery,
+        .future-dev {
+            margin: 30px 0;
+            padding: 20px;
+            background-color: #C4C7C6;
+            border-radius: 8px;
+        }
+
+        .feature h2,
+        .ai-discovery h2,
+        .future-dev h2 {
+            color: #726E75;
+        }
+
+        .cta {
+            padding: 30px;
+            text-align: center;
+            background-color: #98A2B5;
+            border-radius: 8px;
+        }
+
+        .cta h2 {
+            font-size: 2em;
+        }
+
+        /* Additional Styles */
+        /* ... (As provided in previous examples) ... */
     </style>
 </head>
 
