--- a/nomad/index.html
+++ b/nomad/index.html
@@ -269,8 +269,58 @@
             font-size: 2em;
         }
 
-        /* Additional Styles */
-        /* ... (As provided in previous examples) ... */
+        .support-section {
+            background-color: #C4C7C6;
+            padding: 40px;
+            border-radius: 8px;
+            margin: 30px 0;
+        }
+
+        .support-section h2 {
+            font-size: 2em;
+            color: #726E75;
+            margin-bottom: 20px;
+        }
+
+        .support-section p {
+            font-size: 1.2em;
+            margin-bottom: 30px;
+        }
+
+        .support-section form {
+            display: grid;
+            gap: 20px;
+        }
+
+        .support-section label {
+            font-weight: bold;
+            color: #726E75;
+        }
+
+        .support-section input[type="text"],
+        .support-section input[type="email"],
+        .support-section textarea {
+            width: 100%;
+            padding: 10px;
+            border: 2px solid #98A2B5;
+            border-radius: 5px;
+            background-color: #C8C6BE;
+        }
+
+        .support-section input[type="submit"] {
+            background-color: #726E75;
+            color: #C8C6BE;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .support-section input[type="submit"]:hover {
+            background-color: #302928;
+            color: #98A2B5;
+        }
     </style>
 </head>
 
@@ -336,26 +386,35 @@
             </div>
         </section>
 
-        <!-- Testimonials -->
-        <section class="testimonials">
-            <h2>What Our Users Say</h2>
-            <div class="testimonial">
-                <p>"I've never planned trips this effortlessly! Nomad has changed the game for me."</p>
-                <span>- Alex</span>
-            </div>
-            <div class="testimonial">
-                <p>"Discovering new places and organizing my itineraries has never been easier. Kudos to the Nomad
-                    team!"</p>
-                <span>- Jamie</span>
-            </div>
-        </section>
-
         <!-- Call To Action -->
         <section class="cta">
             <h2>Ready for Your Next Adventure?</h2>
             <p>Join the Nomad community. Simplify your travels and make every journey memorable.</p>
             <button>Get Started</button>
         </section>
+
+        <!-- Support Email Section -->
+        <section class="support-section">
+            <h2>Contact Us</h2>
+            <p>We are working relentlessly to bring you new adventures. If you encounter any issues or have suggestions,
+                please let us know.</p>
+            <form action="mailto:info@graphitedev.com" method="post" enctype="text/plain">
+                <label for="email">Your Email:</label>
+                <input type="email" id="email" name="email" required placeholder="Enter your email address">
+
+                <label for="subject">Subject:</label>
+                <input type="text" id="subject" name="subject" value="Nomad" readonly>
+
+                <label for="message">Your Message:</label>
+                <textarea id="message" name="message" rows="5" required
+                    placeholder="Describe your issue or suggestion..."></textarea>
+
+                <input type="submit" value="Submit">
+            </form>
+        </section>
+
+
+
     </div>
 </body>
 
