--- a/nomad/index.html
+++ b/nomad/index.html
@@ -8,212 +8,11 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            color: #333;
-            line-height: 1.6;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: auto;
-            padding: 20px;
-        }
-
-        header {
-            text-align: center;
-            padding: 80px 0;
-            background-color: #fff;
-            border-bottom: 1px solid #e1e1e1;
-        }
-
-        header img {
-            width: 200px;
-            margin-bottom: 20px;
-        }
-
-        h1,
-        h2 {
-            font-weight: 400;
-        }
-
-        .features-list {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 40px;
-            margin-top: 40px;
-            background-color: #fff;
-            padding: 40px 20px;
-            border-radius: 5px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-        }
-
-        .feature {
-            text-align: center;
-            padding: 20px;
-        }
-
-        .feature img {
-            width: 80%;
-            margin: 20px 0;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .cta {
-            text-align: center;
-            margin-top: 50px;
-            padding: 50px 0;
-            background-color: #fff;
-            border-top: 1px solid #e1e1e1;
-            border-bottom: 1px solid #e1e1e1;
-        }
-
-        .about-us {
-            padding: 60px 0;
-            background-color: #fff;
-            margin-top: 40px;
-            border-radius: 5px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-        }
-
-        /* Existing styles */
-        /* ... (Include the styles previously provided) ... */
-
-        /* Added/Modified styles */
-
-        .logo {
-            max-width: 250px;
-        }
-
-        .mission-section,
-        .features-list,
-        .testimonials,
-        .cta {
-            background: #fff;
-            margin-top: 40px;
-            padding: 40px;
-            border-radius: 8px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-        }
-
-        .mission-section img,
-        .features-list .feature img {
-            max-width: 100%;
-            border-radius: 8px;
-            margin: 20px 0;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        }
-
-        .testimonials {
-            background: #F9F9F9;
-            text-align: center;
-        }
-
-        .testimonial {
-            padding: 20px;
-            border-bottom: 1px solid #EAEAEA;
-        }
-
-        .testimonial:last-child {
-            border-bottom: none;
-        }
-
-        .cta {
-            text-align: center;
-        }
-
-        button {
-            background-color: #2E77D0;
-            color: white;
-            padding: 15px 30px;
-            border: none;
-            border-radius: 5px;
-            font-size: 18px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background-color: #245B9B;
-        }
-
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #F3F4F6;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px 0;
-        }
-
-        .logo-nav {
-            display: flex;
-            align-items: center;
-        }
-
-        .logo {
-            max-width: 200px;
-            margin-right: 20px;
-        }
-
-        .nav-items {
-            list-style: none;
-        }
-
-        header {
-            text-align: center;
-            padding: 50px 0;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-            position: relative;
-        }
-
-        .header-image {
-            max-width: 100%;
-            border-radius: 8px;
-            margin-top: 20px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-        }
-
-
-        .ai-discovery,
-        .future-dev {
-            margin: 50px 0;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-        }
-
-        ul {
-            margin-top: 20px;
-            list-style-type: disc;
-            padding-left: 40px;
-        }
-
-        li {
-            margin-bottom: 15px;
-        }
-
-
-        body {
-            font-family: 'Arial', sans-serif;
             background-color: #302928;
             color: #98A2B5;
             margin: 0;
             padding: 0;
+            line-height: 1.6;
         }
 
         .container {
@@ -282,11 +81,6 @@
             margin-bottom: 20px;
         }
 
-        .support-section p {
-            font-size: 1.2em;
-            margin-bottom: 30px;
-        }
-
         .support-section form {
             display: grid;
             gap: 20px;
@@ -321,25 +115,61 @@
             background-color: #302928;
             color: #98A2B5;
         }
+
+        .logo-container {
+            display: flex;
+            align-items: center;
+        }
+
+        .logo {
+            width: 40px;
+            height: auto;
+            margin-right: 10px;
+        }
+
+        .branding-text {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .app-name {
+            font-family: 'Dancing Script', cursive;
+            /* Remember to include the Google Font link in your HTML */
+            font-size: 2em;
+            color: #302928;
+        }
+
+        .slogan {
+            font-size: 1.2em;
+            font-style: italic;
+            color: #726E75;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <nav>
-            <div class="logo-nav">
-                <img src="../assets/nomad/nomad-logo.png" alt="Nomad Logo" class="logo">
-            </div>
-            <ul class="nav-items">
-                <!-- Placeholder for future navigation links -->
-            </ul>
-        </nav>
+
         <header>
-            <h1>Welcome to Nomad</h1>
-            <p>Where your dream journey becomes a reality. From local hidden gems to worldwide adventures, Nomad is your
-                travel companion.</p>
-            <img src="URL_FOR_A_BEACH_OR_DESTINATION_IMAGE" alt="Inviting travel destination" class="header-image">
+            <div class="logo-container">
+                <!-- Logo Placeholder -->
+                <img src="../assets/nomad/nomad-logo.png" alt="Nomad Logo" class="logo">
+                <div class="branding-text">
+                    <h1 class="app-name">Nomad</h1>
+                    <p class="slogan">Discover. Dream. Explore.</p>
+                </div>
+            </div>
+            <p>Tired of the endless hours planning trips? Dive into the world of Nomad, where your next adventure is a
+                few taps away.</p>
         </header>
+
+
+        <h1>Welcome to Nomad</h1>
+        <p>Where your dream journey becomes a reality. From local hidden gems to worldwide adventures, Nomad is your
+            travel companion.</p>
+        <img src="https://images.unsplash.com/photo-1532594722383-b75fb8381b55?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2578&q=80"
+            alt="Inviting travel destination" class="header-image">
+
 
         <!-- AI-Powered Discovery -->
         <section class="ai-discovery">
